--- a/.travis.yml
+++ b/.travis.yml
@@ -9,19 +9,20 @@ env:
   - CMD=./test
 
 python:
-  - 2.6
   - 2.7
-  - 3.3
+  - 2.6
   - 3.4
+  - 3.3
 
 matrix:
   allow_failures:
     - python: 3.3
-    - env: CMD="flake8 aldryn_categories"
+    - python: 3.4
+    - env: CMD="aldryn_categories"
   fast_finish: true
   include:
     - python: 2.7
-      env: CMD="flake8 aldryn_categories"
+      env: CMD="aldryn_categories"
 
 cache:
   directories:
