--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ sudo: false
 
 env:
   - CMD=./test
+  - CMD="flake8 aldryn_categories"
 
 python:
   - 2.7
@@ -18,9 +19,9 @@ matrix:
   # allow_failures:
   #   - env: CMD="flake8 aldryn_categories"
   fast_finish: true
-  include:
-    - python: 2.7
-    - env: CMD="flake8 aldryn_categories"
+  # include:
+    # - python: 2.7
+    #   env: CMD="flake8 aldryn_categories"
 
 cache:
   directories:
