--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,7 @@ cache:
     - $HOME/.wheelhouse
 
 install:
-  - pip wheel --wheel-dir $HOME/.wheelhouse -r test_requirements.txt
+  - pip wheel --wheel-dir $HOME/.wheelhouse -r "test_requirements/django-$DJANGO.txt"
   - pip install --use-wheel --no-index --find-links=$HOME/.wheelhouse -r "test_requirements/django-$DJANGO.txt"
 
 script: coverage run test_settings.py
