--- a/.travis.yml
+++ b/.travis.yml
@@ -38,3 +38,6 @@ install:
 script: coverage run test_settings.py
 
 after_success: coveralls
+
+notifications:
+  webhooks: http://addons.us-iad-rs.aldryn.io/en/travis-endpoint/
