--- a/.travis.yml
+++ b/.travis.yml
@@ -9,28 +9,19 @@ env:
   matrix:
     - TOXENV=flake8
 
-    # py{34,33,27}-dj{18}-cms{31}
-    - TOXENV=py34-dj18-cms31
-    - TOXENV=py33-dj18-cms31
-    - TOXENV=py27-dj18-cms31
+    # py{34,33,27}-dj{18,17,16}
+    - TOXENV=py34-dj18
+    - TOXENV=py33-dj18
+    - TOXENV=py27-dj18
+    - TOXENV=py34-dj17
+    - TOXENV=py33-dj17
+    - TOXENV=py27-dj17
+    - TOXENV=py34-dj16
+    - TOXENV=py33-dj16
+    - TOXENV=py27-dj16
 
-    # py{34,33,27}-dj{17,16}-cms{31,30}
-    - TOXENV=py34-dj17-cms31
-    - TOXENV=py34-dj17-cms30
-    - TOXENV=py33-dj17-cms31
-    - TOXENV=py33-dj17-cms30
-    - TOXENV=py27-dj17-cms31
-    - TOXENV=py27-dj17-cms30
-    - TOXENV=py34-dj16-cms31
-    - TOXENV=py34-dj16-cms30
-    - TOXENV=py33-dj16-cms31
-    - TOXENV=py33-dj16-cms30
-    - TOXENV=py27-dj16-cms31
-    - TOXENV=py27-dj16-cms30
-
-    # py{26}-dj{16}-cms{31,30}
-    - TOXENV=py26-dj16-cms31
-    - TOXENV=py26-dj16-cms30
+    # py{26}-dj{16}
+    - TOXENV=py26-dj16
 
 cache:
   directories:
