--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = flake8, py{34,33,27}-dj{18}-cms{31}, py{34,33,27}-dj{17,16}-cms{31,30}, py{26}-dj{16}-cms{31,30}
+envlist = flake8, py{34,33,27}-dj{18,17,16}, py{26}-dj{16}
 skip_missing_interpreters = True
 
 [testenv]
@@ -21,8 +21,6 @@ deps =
     dj16: -rtest_requirements/django-1.6.txt
     dj17: -rtest_requirements/django-1.7.txt
     dj18: -rtest_requirements/django-1.8.txt
-    cms30: django-cms<3.1
-    cms31: django-cms>3.1.1,<3.2
 basepython =
     py26: python2.6
     py27: python2.7
