Update test settings, update djangocms-helper version, remove skip_missing_interpreters
If you are running tox locally and want to avoid failures due to missing interpreters - please use command line args for tox --skip-missing-interpreters
http://tox.readthedocs.org/en/latest/config.html#confval-skip_missing_interpreters=BOOL
Local setup should not affect travis test failures.

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,8 @@
 [tox]
-envlist = flake8, py{34,33,27}-dj{18,17,16}, py{26}-dj{16}
-skip_missing_interpreters = True
+envlist =
+    flake8
+    py{34,33,27}-dj{18,17,16}
+    py26-dj16
 
 [testenv]
 passenv =
