--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 envlist =
     flake8
-    py{34,33,27}-dj{18,17,16}
+    py{34,33,27}-dj{19,18,17,16}
     py26-dj16
 
 [testenv]
@@ -23,6 +23,7 @@ deps =
     dj16: -rtest_requirements/django-1.6.txt
     dj17: -rtest_requirements/django-1.7.txt
     dj18: -rtest_requirements/django-1.8.txt
+    dj19: -rtest_requirements/django-1.9.txt
 basepython =
     py26: python2.6
     py27: python2.7
