Fix flake8 conf

--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,7 @@
 toxworkdir = {homedir}/.toxenvs/aldryn-categories
 envlist =
     flake8
-    py{34,33,27}-dj{19,18,17,16}
+    py{35,34,33,27}-dj{19,18,17,16}
     py26-dj16
 
 [testenv]
@@ -30,13 +30,14 @@ basepython =
     py27: python2.7
     py33: python3.3
     py34: python3.4
+    py35: python3.5
 
 [testenv:flake8]
 deps = flake8
 commands = flake8
-basepython = python2.7
+basepython = python3.4
 
 [flake8]
 ignore = E251,E128
-exclude = aldryn_categories/migrations/*,aldryn_categories/south_migrations/*,docs/conf.py
+exclude = aldryn_categories/migrations/*,aldryn_categories/south_migrations/*,docs/conf.py,build/*
 max-line-length = 80
