--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,7 @@
 toxworkdir = {homedir}/.toxenvs/aldryn-categories
 envlist =
     flake8
-    py{35,34,33,27}-dj{18,19,110,111}
+    py{36,35,34,27}-dj{18,19,110,111}
 
 [testenv]
 passenv =
@@ -29,6 +29,7 @@ basepython =
     py33: python3.3
     py34: python3.4
     py35: python3.5
+    py36: python3.6
 
 [testenv:flake8]
 deps = flake8
