Added CMS 3.5 to test matrix (#44)

--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,8 @@
 toxworkdir = {homedir}/.toxenvs/aldryn-categories
 envlist =
     flake8
-    py{36,35,34,27}-dj{18,19,110,111}
+    py{36,35,34,27}-dj{19,18}-cms{34,33,32}
+    py{36,35,34,27}-dj{111,110}-cms{34,35}
 
 [testenv]
 passenv =
@@ -24,6 +25,12 @@ deps =
     dj19: -rtest_requirements/django-1.9.txt
     dj110: -rtest_requirements/django-1.10.txt
     dj111: -rtest_requirements/django-1.11.txt
+
+    cms32: django-cms>=3.2,<3.3
+    cms33: django-cms>=3.3,<3.4
+    cms34: django-cms>=3.4,<3.5
+    cms35: django-cms>=3.5,<3.6
+
 basepython =
     py27: python2.7
     py33: python3.3
