--- a/.travis.yml
+++ b/.travis.yml
@@ -7,34 +7,43 @@ python: 3.5
 # Use container based infrastructure
 sudo: false
 
-matrix:
-  include:
-    - python: '3.5'
-      env: TOXENV=flake8
-    - python: '3.6'
-      env: TOXENV=py36-dj111
-    - python: '3.6'
-      env: TOXENV=py36-dj110
-    - python: '3.6'
-      env: TOXENV=py36-dj19
-    - python: '3.6'
-      env: TOXENV=py36-dj18
-    - python: '3.5'
-      env: TOXENV=py35-dj111
-    - python: '3.5'
-      env: TOXENV=py35-dj110
-    - python: '3.5'
-      env: TOXENV=py35-dj19
-    - python: '3.5'
-      env: TOXENV=py35-dj18
-    - python: '2.7'
-      env: TOXENV=py27-dj111
-    - python: '2.7'
-      env: TOXENV=py27-dj110
-    - python: '2.7'
-      env: TOXENV=py27-dj19
-    - python: '2.7'
-      env: TOXENV=py27-dj18
+env:
+  matrix:
+    - TOXENV=flake8
+
+    - TOXENV=py35-dj111-cms35
+    - TOXENV=py35-dj111-cms34
+    - TOXENV=py34-dj111-cms35
+    - TOXENV=py34-dj111-cms34
+    - TOXENV=py27-dj111-cms35
+    - TOXENV=py27-dj111-cms34
+
+    - TOXENV=py35-dj110-cms35
+    - TOXENV=py35-dj110-cms34
+    - TOXENV=py34-dj110-cms35
+    - TOXENV=py34-dj110-cms34
+    - TOXENV=py27-dj110-cms35
+    - TOXENV=py27-dj110-cms34
+
+    - TOXENV=py35-dj19-cms34
+    - TOXENV=py35-dj19-cms33
+    - TOXENV=py35-dj19-cms32
+    - TOXENV=py34-dj19-cms34
+    - TOXENV=py34-dj19-cms33
+    - TOXENV=py34-dj19-cms32
+    - TOXENV=py27-dj19-cms34
+    - TOXENV=py27-dj19-cms33
+    - TOXENV=py27-dj19-cms32
+
+    - TOXENV=py35-dj18-cms34
+    - TOXENV=py35-dj18-cms33
+    - TOXENV=py35-dj18-cms32
+    - TOXENV=py34-dj18-cms34
+    - TOXENV=py34-dj18-cms33
+    - TOXENV=py34-dj18-cms32
+    - TOXENV=py27-dj18-cms34
+    - TOXENV=py27-dj18-cms33
+    - TOXENV=py27-dj18-cms32
 
 cache:
   directories:
