Added support for Django 2.0/2.1 and removed support for Django < 1.11 (#46)

--- a/tox.ini
+++ b/tox.ini
@@ -2,8 +2,9 @@
 toxworkdir = {homedir}/.toxenvs/aldryn-categories
 envlist =
     flake8
-    py{36,35,34,27}-dj{19,18}-cms{34,33,32}
-    py{36,35,34,27}-dj{111,110}-cms{34,35}
+    py{27,34,35,36}-dj111-cms{34,35,36}
+    py{34,35,36}-dj20-cms36
+    py{35,36}-dj21-cms36
 
 [testenv]
 passenv =
@@ -21,19 +22,17 @@ commands =
     coverage run test_settings.py
     - coverage report
 deps =
-    dj18: -rtest_requirements/django-1.8.txt
-    dj19: -rtest_requirements/django-1.9.txt
-    dj110: -rtest_requirements/django-1.10.txt
-    dj111: -rtest_requirements/django-1.11.txt
+    -r{toxinidir}/test_requirements.txt
+    dj111: Django>=1.11,<2.0
+    dj20: Django>=2.0,<2.1
+    dj21: Django>=2.1,<2.2
 
-    cms32: django-cms>=3.2,<3.3
-    cms33: django-cms>=3.3,<3.4
     cms34: django-cms>=3.4,<3.5
     cms35: django-cms>=3.5,<3.6
+    cms36: https://github.com/divio/django-cms/archive/release/3.6.x.zip
 
 basepython =
     py27: python2.7
-    py33: python3.3
     py34: python3.4
     py35: python3.5
     py36: python3.6
@@ -41,9 +40,9 @@ basepython =
 [testenv:flake8]
 deps = flake8
 commands = flake8
-basepython = python3.4
+basepython = python3.5
 
 [flake8]
 ignore = E251,E128
-exclude = aldryn_categories/migrations/*,aldryn_categories/south_migrations/*,docs/conf.py,build/*
-max-line-length = 80
+exclude = aldryn_categories/migrations/*,docs/conf.py,build/*
+max-line-length = 120
